Issue #9908: Fix os.stat() on bytes paths under Windows 7.